# kwin-pretile-restore

./: .gitignore  CMakeLists.txt  DEBUG.md  README.md  apt-hook.conf  install-arch.sh  install-debian.sh  install-general.sh  install.sh  kwinpretilerestore.hook  rebuild-hook.sh  rebuild.sh  uninstall-arch.sh  uninstall-debian.sh  uninstall-general.sh  uninstall.sh
src/: CMakeLists.txt  kwin_pretile_restore_plugin.cpp  kwin_pretile_restore_plugin.h  metadata.json  pretile_geometry_tracker.cpp  pretile_geometry_tracker.h
